--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "debug": "^4.3.4",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^8.4.0",
+    "mongoose-currency": "^0.3.0",
     "morgan": "^1.10.0",
+    "passport-jwt": "^4.0.0",
     "pug": "^3.0.2"
   }
 }
